# pico2-swd-riscv

./: CMakeLists.txt  README.md
examples/test_suite/: CMakeLists.txt  main.c  test_api_coverage.c  test_cache.c  test_code_exec.c  test_framework.h  test_hart0.c  test_memory_ops.c
include/pico2-swd-riscv/: dap.h  rp2350.h
src/: dap.c  rp2350.c  swd_protocol.c
